Task:PANDA-3152 Description: the impl of the checkout for route-outlet way.

--- a/projects/storefrontlib/src/lib/checkout/components/multi-step-checkout/delivery-mode/delivery-mode.component.html
+++ b/projects/storefrontlib/src/lib/checkout/components/multi-step-checkout/delivery-mode/delivery-mode.component.html
@@ -1,4 +1,4 @@
-<div [formGroup]="mode">
+<div>
   <div class="row">
     <div class="col-md-12 col-lg-9">
       <h3 class="cx-checkout-title d-none d-lg-block d-xl-block">
