--- a/projects/storefrontlib/src/lib/checkout/components/multi-step-checkout/container/multi-step-checkout.component.html
+++ b/projects/storefrontlib/src/lib/checkout/components/multi-step-checkout/container/multi-step-checkout.component.html
@@ -4,77 +4,31 @@
   <div *ngIf="(cart$ | async) as cart">
     <div class="row">
       <div class="col-md-12 col-lg-8">
-        <!-- VISIBLE ONLY ON LG AND XL SCREENS -->
-        <!-- Navigation -->
-        <div class="cx-nav d-none d-lg-block d-xl-block">
-          <ul class="cx-list">
-            <li
-              *ngFor="let nav of navs"
-              class="cx-item"
-              [ngClass]="{
-                ' is-disabled': nav.status.disabled,
-                ' is-active': nav.status.active
-              }"
-            >
-              <a
-                class="cx-link "
-                [ngClass]="{
-                  ' is-disabled': nav.status.disabled,
-                  ' is-active': nav.status.active
-                }"
-                (click)="
-                  nav.status.disabled === false ? nextStep(nav.id) : false
-                "
-                >{{ nav.label }}</a
-              >
-            </li>
-          </ul>
-        </div>
-
         <div class="cx-media">
-          <div class="cx-list-media">
-            {{
-              'cartItems.cartTotal' | cxTranslate: { count: cart.totalItems }
-            }}:
-            {{ cart.subTotal?.formattedValue }}
-          </div>
+          <ul class="cx-list">
+            <ul class="cx-list">
+              <div class="cx-list-media">
+                {{
+                  'cartItems.cartTotal'
+                    | cxTranslate: { count: cart.totalItems }
+                }}:
+                {{ cart.subTotal?.formattedValue }}
+              </div>
 
-          <div *ngFor="let nav of navs">
-            <!-- Navigation -->
-            <div
-              class="cx-list-media"
-              [ngClass]="{ ' is-active': nav.status.active }"
-            >
-              <div>{{ nav.label }}</div>
-              <button
-                *ngIf="nav.status.completed && !nav.status.active"
-                class="btn btn-link"
-                (click)="nextStep(nav.id)"
-              >
-                {{ 'common.edit' | cxTranslate }}
-              </button>
-            </div>
-
-            <!-- Content -->
-            <div *ngIf="nav.status.active && step === 1">
-              <cx-shipping-address
-                (goToStep)="nextStep($event)"
-              ></cx-shipping-address>
-            </div>
-            <div *ngIf="nav.status.active && step === 2">
-              <cx-delivery-mode
-                (goToStep)="nextStep($event)"
-              ></cx-delivery-mode>
-            </div>
-            <div *ngIf="nav.status.active && step === 3">
-              <cx-payment-method
-                (goToStep)="nextStep($event)"
-              ></cx-payment-method>
-            </div>
-            <div *ngIf="nav.status.active && step === 4">
-              <cx-review-submit></cx-review-submit>
-            </div>
-          </div>
+              <div *ngFor="let step of steps">
+                <ng-container>
+                  <div class="wrapper">
+                    <div class="cx-bottom-links">
+                      <a [routerLink]="step.link" class="cx-link btn-link">{{
+                        step.link
+                      }}</a>
+                    </div>
+                  </div>
+                </ng-container>
+              </div>
+              <router-outlet></router-outlet>
+            </ul>
+          </ul>
         </div>
       </div>
 
